positioned the play game button in the center horizontally between the leaderboard and images grid, by wrapping a div and using bootstrap classes. Also fixed a small margin error which was causing asymmetry in how the leaderboard looked on smaller devices

--- a/4pics1word/static/css/challenge_page.css
+++ b/4pics1word/static/css/challenge_page.css
@@ -48,7 +48,7 @@ p {
 
 .table-container {
     flex: 1;
-    margin-left: 20px; /* Adjust as needed for spacing between grid and table */
+    /* margin-left: 20px; Adjust as needed for spacing between grid and table */
 }
 
 .table-container {
